Почистил варнинги